[gd_scene load_steps=7 format=2]

[ext_resource path="res://client/game/interface/panels/entity/display/attack_type/AttackTypePanel.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_melee_attack.png" type="Texture" id=2]
[ext_resource path="res://client/game/interface/panels/entity/display/attack_type/AttackTypeBox.gd" type="Script" id=3]
[ext_resource path="res://shared/shaders/Outline.tres" type="Material" id=4]
[ext_resource path="res://assets/sprites/interface/panel-40x40.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/interface/panel-clicked-40x40.png" type="Texture" id=6]


[node name="AttackTypeBox" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 44.0
custom_constants/margin_top = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
icon = ExtResource( 2 )

[node name="AttackTypePanel" type="TextureRect" parent="."]
material = ExtResource( 4 )
margin_top = 4.0
margin_right = 40.0
margin_bottom = 44.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 5 )
script = ExtResource( 1 )
image = ExtResource( 5 )
image_clicked = ExtResource( 6 )

[node name="AttackTypeIcon" type="TextureRect" parent="AttackTypePanel"]
self_modulate = Color( 0.756863, 0.843137, 0.87451, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="TextureRect" parent="AttackTypePanel/AttackTypeIcon"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="AttackTypePanel" to="." method="_on_AttackTypePanel_gui_input"]
[connection signal="mouse_entered" from="AttackTypePanel" to="." method="_on_AttackTypePanel_mouse_entered"]
[connection signal="mouse_exited" from="AttackTypePanel" to="." method="_on_AttackTypePanel_mouse_exited"]
